force-app/main/default/objects/Case/fields/Affiliate_TDS__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_TDS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliate/TDS</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Affiliate, Disaster Services</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Affiliate/TDS)</relationshipLabel>
    <relationshipName>Cases_for_Affiliate</relationshipName>
    <type>Lookup</type>
</CustomField>