force-app/main/default/objects/Case/fields/Dev_Service_Requests__c.field-meta.xml
<CustomField>
    <fullName>Dev_Service_Requests__c</fullName>
    <label>Dev Service Requests</label>
    <summaryFilterItems>
        <field>System_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Ready for Dev, In Progress, Test - Failed</value>
    </summaryFilterItems>
    <summaryForeignKey>System_Request__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>