force-app/main/default/objects/Case/fields/Estimate_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Roll_Up__c</fullName>
    <label>Estimate Roll Up</label>
    <summaryForeignKey>System_Request__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>