force-app/main/default/objects/Case/fields/Estimated_Hours_10__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_10__c</fullName>
    <label>Estimated Hours (+/- 10%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>