force-app/main/default/objects/Case/fields/Request_Order__c.field-meta.xml
<CustomField>
    <fullName>Request_Order__c</fullName>
    <label>Request Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>