force-app/main/default/objects/Case/fields/Review_for_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Review_for_Estimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review for Estimate</label>
    <type>Checkbox</type>
</CustomField>