force-app/main/default/objects/Case/fields/sf4twitter__Author_External_Id__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Author_External_Id__c</fullName>
    <label>Author External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>