force-app/main/default/objects/Case/fields/sf4twitter__Twitter_Username__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Username__c</fullName>
    <label>Author Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>