force-app/main/default/objects/Case/fields/sf4twitter__twitterId__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__twitterId__c</fullName>
    <externalId>true</externalId>
    <label>Conversation External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>