force-app/main/default/objects/Case/fields/Test_System_Requests__c.field-meta.xml
<CustomField>
    <fullName>Test_System_Requests__c</fullName>
    <label>Test System Requests</label>
    <summaryFilterItems>
        <field>System_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Fixed, Deployed</value>
    </summaryFilterItems>
    <summaryForeignKey>System_Request__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>