force-app/main/default/objects/Case/fields/Total_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimate__c</fullName>
    <label>Total Estimate</label>
    <summarizedField>System_Request__c.Estimate__c</summarizedField>
    <summaryForeignKey>System_Request__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>