force-app/main/default/objects/Case/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <label>Total Time</label>
    <summarizedField>System_Request__c.Total_Time__c</summarizedField>
    <summaryForeignKey>System_Request__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>