force-app/main/default/objects/Case/fields/Weekly_Notes__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly Notes</label>
    <type>Checkbox</type>
</CustomField>