force-app/main/default/objects/Case/fields/Working_Enhancement__c.field-meta.xml
<CustomField>
    <fullName>Working_Enhancement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Working Enhancement</label>
    <type>Checkbox</type>
</CustomField>