force-app/main/default/objects/Case/recordTypes/Inventory.recordType-meta.xml
<RecordType>
    <fullName>Inventory</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <label>Inventory</label>
</RecordType>