force-app/main/default/objects/Case/recordTypes/Plan_B.recordType-meta.xml
<RecordType>
    <fullName>Plan_B</fullName>
    <active>false</active>
    <businessProcess>Standard</businessProcess>
    <label>Plan B</label>
</RecordType>