force-app/main/default/objects/Case/recordTypes/Tool_Orders.recordType-meta.xml
<RecordType>
    <fullName>Tool_Orders</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <label>Tool Orders</label>
</RecordType>