force-app/main/default/objects/Case/recordTypes/Tool_Types.recordType-meta.xml
<RecordType>
    <fullName>Tool_Types</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <label>Tool Types</label>
</RecordType>