force-app/main/default/objects/Case/listViews/All_Cases_Charlotte_ToolBank.listView-meta.xml
<ListView>
    <fullName>All_Cases_Charlotte_ToolBank</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Affiliate_TDS__c</columns>
    <columns>NAME</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Order__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Test_System_Requests__c</columns>
    <columns>Dev_Service_Requests__c</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Weekly_Notes__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Affiliate_TDS__c</field>
        <operation>equals</operation>
        <value>Charlotte Community ToolBank</value>
    </filters>
    <label>All Cases-Charlotte ToolBank</label>
    <sharedTo>
        <group>Charlotte_Community_ToolBank</group>
    </sharedTo>
</ListView>