force-app/main/default/objects/Case/listViews/All_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Affiliate_TDS__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Order__c</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Test_System_Requests__c</columns>
    <columns>Dev_Service_Requests__c</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>Weekly_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Standard</value>
    </filters>
    <filters>
        <field>Weekly_Notes__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <filters>
        <field>Weekly_Notes__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Weekly Notes</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>