force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Affiliate_TDS__c</columns>
    <columns>NAME</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Order__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Test_System_Requests__c</columns>
    <columns>Dev_Service_Requests__c</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Weekly_Notes__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Standard</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Working,More Info Requested,Resolved</value>
    </filters>
    <filters>
        <field>CASES.REASON</field>
        <operation>notEqual</operation>
        <value>Duplicate</value>
    </filters>
    <filters>
        <field>PARENT.CASE_NUMBER</field>
        <operation>notEqual</operation>
        <value>00001679</value>
    </filters>
    <label>In Progress Cases</label>
</ListView>