force-app/main/default/objects/Case/listViews/Cincinnati_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Cincinnati_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Affiliate_TDS__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Working,Resolved</value>
    </filters>
    <filters>
        <field>Affiliate_TDS__c</field>
        <operation>equals</operation>
        <value>Cincinnati Community ToolBank</value>
    </filters>
    <label>Cincinnati Open Cases</label>
    <sharedTo>
        <group>Admins</group>
        <group>Cincinnati_Community_ToolBank</group>
    </sharedTo>
</ListView>