force-app/main/default/objects/Case/listViews/Enhancement_Cases.listView-meta.xml
<ListView>
    <fullName>Enhancement_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Case_Type__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Order__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Resolution__c</columns>
    <columns>Estimate_Roll_Up__c</columns>
    <columns>Affiliate_TDS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Type__c</field>
        <operation>equals</operation>
        <value>Enhancement</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Design</value>
    </filters>
    <label>Enhancement Cases</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>