force-app/main/default/objects/Case/listViews/Full_list.listView-meta.xml
<ListView>
    <fullName>Full_list</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Affiliate_TDS__c</columns>
    <columns>NAME</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Order__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Test_System_Requests__c</columns>
    <columns>Dev_Service_Requests__c</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Weekly_Notes__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Full list</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>