force-app/main/default/objects/Case/listViews/Status_Flipping_Cases.listView-meta.xml
<ListView>
    <fullName>Status_Flipping_Cases</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Affiliate_TDS__c</columns>
    <columns>NAME</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Order__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Test_System_Requests__c</columns>
    <columns>Dev_Service_Requests__c</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Weekly_Notes__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Standard</value>
    </filters>
    <filters>
        <field>PARENT.CASE_NUMBER</field>
        <operation>equals</operation>
        <value>00001679</value>
    </filters>
    <filters>
        <field>CASES.CASE_NUMBER</field>
        <operation>equals</operation>
        <value>00001679</value>
    </filters>
    <label>Status Flipping Cases</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>