force-app/main/default/objects/Case/listViews/ToolBank_Training_Org_Open_Cases.listView-meta.xml
<ListView>
    <fullName>ToolBank_Training_Org_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Affiliate_TDS__c</field>
        <operation>equals</operation>
        <value>ToolBank_Training_Org</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Working,Resolved</value>
    </filters>
    <label>ToolBank_Training_Org Open Cases</label>
    <sharedTo>
        <group>Admins</group>
        <group>ToolBank_Training_Org</group>
    </sharedTo>
</ListView>